--- a/index.html
+++ b/index.html
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
-<html lang="ja">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My GitHub Page</title>
+    <!-- CSSリンク -->
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <h1>Welcome to My GitHub Page</h1>
     <p>This is a sample page hosted on GitHub Pages.</p>
+    <button id="actionButton">Click Me!</button>
+    <p id="responseMessage"></p>
+    <!-- JavaScriptリンク -->
+    <script src="script.js"></script>
 </body>
 </html>
